# auth_kit

./: .gitignore  Cargo.toml  README.md
examples/: abac.rs  basic.rs  jwt.rs  login.rs  rbac.rs  sba.rs
src/: auth.rs  error.rs  lib.rs  model.rs
src/auth/: auth_n.rs  auth_z.rs  authenticator.rs  authorizator.rs  mod.rs  scope.rs
tests/: register_test.rs  scope_test.rs
