[package]
name = "auth_kit"
version = "0.1.2"
edition = "2024"
authors = ["Jerry Maheswara  <jerrymaheswara@gmail.com>"]
description = "Toolkit for Authentication and Authorization in Rust"
license = "Apache-2.0"
repository = "https://github.com/jerry-maheswara-github/auth_kit"
documentation = "https://docs.rs/auth_kit"
readme = "README.md"
keywords = ["authentication", "authorization", "security", "login"]
categories = ["authentication", "web-programming"]
exclude = ["/.github", "/.gitignore", "/.vscode", "/target"]

[dependencies]
bcrypt = "0.17.0"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
